changed nested tree map value to ArrayList + expanded append method loop